[project]
name = "jupyterlab-repo"
version = "0.1.0"
description = "Monorepo for JupyterLab notebooks"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MPL-2.0" }
dependencies = [
    "jupyterlab>=4.0.0",
    "notebook>=7.0.0",
    "ipykernel>=6.25.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[tool.uv.workspace]
members = ["notebooks/*"]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "black>=23.0.0",
]
